--- a/app/src/main/res/navigation/navigation_photo.xml
+++ b/app/src/main/res/navigation/navigation_photo.xml
@@ -9,5 +9,24 @@
         android:id="@+id/searchFragment"
         tools:layout="@layout/fragment_search"
         android:name="com.app.pixabay.presentation.ui.search.SearchFragment"
-        android:label="SearchFragment" />
+        android:label="SearchFragment" >
+        <action
+            android:id="@+id/action_searchFragment_to_detailFragment"
+            app:destination="@id/detailFragment" />
+    </fragment>
+    <fragment
+        tools:layout="@layout/fragment_detail"
+        android:id="@+id/detailFragment"
+        android:name="com.app.pixabay.presentation.ui.detail.DetailFragment"
+        android:label="DetailFragment" >
+        <argument
+            android:name="large_image_url"
+            app:argType="string" />
+        <argument
+            android:name="user_name"
+            app:argType="string" />
+        <argument
+            android:name="tags"
+            app:argType="string" />
+    </fragment>
 </navigation>
