--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -14,7 +14,7 @@
         android:layout_marginEnd="29dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:text="flowers"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
