--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -3,46 +3,94 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/search_item_root_layout"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/preview_image_view"
         android:layout_width="102dp"
         android:layout_height="77dp"
-        tools:background="#F39898"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:background="#F39898" />
 
     <TextView
+        android:textColor="@color/dove_gray"
+        android:textStyle="bold"
+        android:fontFamily="@font/calibri"
         android:id="@+id/user_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="Alireza Rafee"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintStart_toEndOf="@+id/preview_image_view"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Alireza Rafee" />
 
     <TextView
+        android:textColor="@color/silver_chalice"
+        android:fontFamily="@font/calibri"
         android:id="@+id/views_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="1292 views"
-        app:layout_constraintStart_toStartOf="@+id/user_text_view"
-        app:layout_constraintTop_toBottomOf="@+id/user_text_view" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/user_text_view"
+        tools:text="1292 views" />
 
     <TextView
+        android:textColor="@color/silver_chalice"
+        android:fontFamily="@font/calibri"
         android:id="@+id/downloads_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="4242 downloads"
+        android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="@+id/views_text_view"
-        app:layout_constraintTop_toBottomOf="@+id/views_text_view" />
+        app:layout_constraintTop_toBottomOf="@+id/views_text_view"
+        tools:text="4242 downloads" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="16dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="@+id/likes_text_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/likes_text_view"
+        app:srcCompat="@drawable/ic_like" />
 
     <TextView
+        android:textColor="@color/silver_chalice"
         android:id="@+id/likes_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="23393 likes"
-        app:layout_constraintStart_toStartOf="@+id/downloads_text_view"
-        app:layout_constraintTop_toBottomOf="@+id/downloads_text_view" />
+        android:layout_marginEnd="4dp"
+        android:fontFamily="@font/calibri"
+        app:layout_constraintEnd_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/views_text_view"
+        tools:text="23393 likes" />
+
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="20dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="@+id/views_text_view"
+        app:layout_constraintStart_toStartOf="@+id/user_text_view"
+        app:layout_constraintTop_toTopOf="@+id/views_text_view"
+        app:srcCompat="@drawable/ic_view" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="@+id/downloads_text_view"
+        app:layout_constraintEnd_toStartOf="@+id/views_text_view"
+        app:layout_constraintStart_toStartOf="@+id/imageView2"
+        app:layout_constraintTop_toTopOf="@+id/downloads_text_view"
+        app:srcCompat="@drawable/ic_download" />
 </androidx.constraintlayout.widget.ConstraintLayout>
