--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,10 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="froly">#F06292</color>
+    <color name="aqua_forest">#4FA388</color>
+    <color name="dove_gray">#676767</color>
+    <color name="amour">#F8E6EC</color>
+    <color name="cabaret">#DC4578</color>
+    <color name="dusty_gray">#9E9999</color>
+    <color name="silver_chalice">#9A9696</color>
 </resources>
