--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -8,6 +8,7 @@
     android:layout_height="match_parent">
 
     <EditText
+        android:textColor="@color/dove_gray"
         android:id="@+id/editTextTextPersonName"
         android:layout_width="0dp"
         android:layout_height="46dp"
