--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,5 +13,7 @@
 <!--        &lt;!&ndash; Status bar color. &ndash;&gt;-->
 <!--        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>-->
         <!-- Customize your theme here. -->
+        <item name="android:statusBarColor" tools:targetApi="l">@color/cabaret</item>
+        <item name="android:navigationBarColor">@color/amour</item>
     </style>
 </resources>
