--- a/app/src/main/res/values-v29/themes.xml
+++ b/app/src/main/res/values-v29/themes.xml
@@ -13,6 +13,6 @@
         <!--        <item name="colorOnSecondary">@color/black</item>-->
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">@color/cabaret</item>
-        <!-- Customize your theme here. -->
+        <item name="android:navigationBarColor">@color/amour</item>
     </style>
 </resources>
