--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,6 +12,7 @@
 <!--        <item name="colorOnSecondary">@color/black</item>-->
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">@color/cabaret</item>
+        <item name="android:navigationBarColor">@color/amour</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
